Bumped dependencies, added github workflow, logback.